# hstorchat

./: .travis.yml  LICENSE  README.md  hstorchat.cabal  torrc
qml/: HSTorChat.qml
src/: GUI.hs  Main.hs  Protocol.hs
src/HSTorChat/: Client.hs  GUI.hs  Protocol.hs
src/Network/HSTorChat/: Client.hs  GUI.hs  Protocol.hs
tests/: Main.hs
